# Commissioning

./: README.md
ReadRED/: CMakeLists.txt  read_red.cxx  setup_ccin2p3.sh  setup_ccin2p3_new.sh  show_red.cxx  sndisplay-demonstrator.cc
ReadRTD/: CMakeLists.txt  README.md  calo_histogramming.cc  calo_histogramming.h  calo_waveform_fft.cc  calo_waveform_fft.h  rtd_ana_calo.cxx  rtd_read_calo.cxx  setup.sh
ReadRTD/analysis/: default_calo_analysis.conf  mean_waveform.gp  plot_mean_waveforms.sh
ReadRTD/tutorials/: snemo_data_commissioning_tutorial_lv0.txt  snemo_data_commissioning_tutorial_lv1.txt
ReadRTD/tutorials/tuto_lv0/: setup.sh  tutorial_calo_commissioning_skl.cxx  tutorial_calo_commissioning_skl_solved.cxx
ReadRTD/tutorials/tuto_lv1/: tutorial_calo_commissioning_skl2.bkup0  tutorial_calo_commissioning_skl2.bkup1  tutorial_calo_commissioning_skl2.bkup2  tutorial_calo_commissioning_skl2.bkup3  tutorial_calo_commissioning_skl2.bkup4
